<resources>
    <string name="app_name">SurveyX</string>



    <string name="please_enter_email">Please enter Email</string>
    <string name="please_enter_mobile">Please enter Mobile</string>
    <string name="please_enter_valid_email">Please enter valid Email</string>
    <string name="please_enter_valid_mobile">Please enter valid Mobile</string>
    <string name="please_select_user_type">Please select user type</string>
    <string name="otp_didnt_match">OTP didn\'t match</string>
    <string name="please_enter_otp"></string>


    <string name="Rs">\u20B9</string>


    <string name="activity_login_hint_full_name">Full Name</string>
    <string name="activity_login_hint_email">Email Address</string>
    <string name="activity_login_hint_mobile">Mobile</string>
    <string name="activity_login_button_submit">SUBMIT</string>
    <string name="activity_login_text_i_agree">You agree to our Term and Condition and Privacy
        Policy
    </string>
    <string name="activity_login_text_check_term_condition">Please check our Term And Condition
    </string>

    <string name="activity_login_text_terms_and_conditions">By signing up you confirm that you have
        read &amp; agree to our company Privacy Policy &amp; Terms and Conditions
    </string>


    <string name="activity_main_text_no_service_found">No Services Found</string>
    <string name="activity_main_text_powered_by">powered by</string>




    <string name="progress_dialog_text_loading">Loading&#8230;</string>
    <string name="progress_dialog_text_generating_survey">Generating Survey&#8230;</string>
    <string name="progress_dialog_text_logging_out">Logging Out&#8230;</string>
    <string name="progress_dialog_text_logging_in">Logging In&#8230;</string>
    <string name="progress_dialog_text_please_wait">Please wait&#8230;</string>
    <string name="progress_dialog_text_sending_request">Sending Request&#8230;</string>
    <string name="progress_dialog_text_submitting_responses">Submitting Responses&#8230;</string>
    <string name="progress_dialog_text_initializing">Initializing Application&#8230;\nThis may take
        some time
    </string>

    <string name="snackbar_text_no_internet_connection_available">No Internet Connection available
    </string>
    <string name="snackbar_text_error_occurred">Error Occurred</string>
    <string name="snackbar_text_unstable_internet">Unstable Internet Connection</string>
    <string name="snackbar_text_exception_occurred">Exception Occurred</string>
    <string name="snackbar_text_invalid_access_pin">Invalid Access PIN</string>

    <string name="snackbar_action_go_to_settings">GO TO SETTINGS</string>
    <string name="snackbar_action_dismiss">DISMISS</string>
    <string name="snackbar_action_retry">RETRY</string>

    <string name="snackbar_action_undo">UNDO</string>


    <string name="dialog_text_new_version_available">New version of the application is available.
        Please update
    </string>


    <string name="dialog_hint_optional">optional</string>

    <string name="dialog_action_yes">YES</string>
    <string name="dialog_action_no">NO</string>
    <string name="dialog_action_ok">OK</string>
    <string name="dialog_action_cancel">CANCEL</string>
    <string name="dialog_action_save">SAVE</string>
    <string name="dialog_action_logout">LOGOUT</string>
    <string name="dialog_action_submit">SUBMIT</string>
    <string name="dialog_action_resend_otp">RESEND OTP</string>
    <string name="dialog_action_proceed">PROCEED</string>
    <string name="dialog_action_ignore">IGNORE</string>
    <string name="dialog_action_update">UPDATE</string>
    <string name="dialog_action_close">CLOSE</string>
    <string name="dialog_action_show_all">SHOW ALL</string>


    <string name="facebook_app_id">1050784248336887</string>

    <string name="dialog_enter_product_brand">Please Enter Brand.</string>
    <string name="dialog_select_product_category">Please Select Category</string>
    <string name="dialog_enter_model_number">Please Enter Model Number</string>
    <string name="dialog_enter_serial_number">Please Enter Serial Number</string>
    <string name="dialog_select_purchase_date">Please Select Purchase Date</string>

    <string name="dialog_enter_request_description">Please Enter Request Description</string>
    <string name="dialog_enter_product_description">Please Enter Product Description</string>


    <string name="question1">About what time did you wake up today?</string>
    <string name="question2">About what time did you have your first tobacco product today?</string>
    <string name="question3">What was the first tobacco product you used today?</string>
    <string name="question3a">Cigarettes</string>
    <string name="question3b">Chewing Tobacco</string>
    <string name="question3c">Cigars/Cigarillos</string>
    <string name="question3d">Snus Pouches</string>
    <string name="question3e">e-Cigarettes &amp; other e-vapor</string>
    <string name="question3f">Moist smokeless tobacco/dip</string>
    <string name="question4">If you checked Moist smokeless/dip, which product did you use as your
        first tobacco product today?
    </string>
    <string name="question4a">The Pouch Product Provided to you</string>
    <string name="question4b">Your OWN Loose Product</string>
    <string name="question4c">Your OWN Pouch Product</string>
    <string name="question5">Did you used the
        <u>
            <b>POUCH PRODUCT PROVIDED</b>
        </u>
        to you today?
    </string>
    <string name="question5a">
        <b>
            <u>Total number of times</u>
        </b>
        you used the pouches
    </string>
    <string name="question5b">
        <b>
            <u>Total number of pouches</u>
        </b>
        you used today
    </string>
    <string name="question5c">What was the
        <b>
            <u>least</u>
        </b>
        amount of time <b>in minutes</b> you kept the pouches
        provided to you in your mouth today?
    </string>
    <string name="question5d">What was the
        <u>
            <b>most</b>
        </u>
        amount of time <b>in minutes</b> you kept the pouches
        provided to you in your mouth today?
    </string>
    <string name="question6">Did you use
        <u>
            <b>YOU OWN LOOSE PRODUCT</b>
        </u>
        today?
    </string>
    <string name="question6a">
        <b>
            <u>Total number of times</u>
        </b>
        you used the loose product today:
    </string>
    <string name="question6b">Approximately
        <b>
            <u>how much of a can</u>
        </b>
        of your own loose product did you use
        today:
    </string>
    <string name="question6b1">Less than ¼ of a can</string>
    <string name="question6b2">About ¼ of a can</string>
    <string name="question6b3">About ½ of a can</string>
    <string name="question6b4">About ¾ of a can</string>
    <string name="question6b5">About 1 can</string>
    <string name="question6b6">More than 1 can</string>

    <string name="question6c">What was the
        <b>
            <u>least</u>
        </b>
        amount of time <b>in minutes</b> you kept your own loose
        dip in your mouth today?
    </string>
    <string name="question6d">What was the
        <b>
            <u>most</u>
        </b>
        amount of time <b>in minutes</b> you kept your own loose
        dip in your mouth today?
    </string>

    <string name="question7">Did you use a
        <b>
            <u>DIFFERENT TOBACCO PRODUCT</u>
        </b>
        today?
    </string>
    <string name="question7a">What other tobacco product(s) did you use? (Mark ALL that apply)
    </string>
    <string name="question7a1">Cigarettes</string>
    <string name="question7a2">Cigars/cigarillos</string>
    <string name="question7a3">E-cigarettes/e-vapor</string>
    <string name="question7a4">Chewing Tobacco</string>
    <string name="question7a5">Snus Pouches</string>

    <string name="question7b">
        <b>
            <u>Total number of times</u>
        </b>
        you used another tobacco product today?
    </string>
    <string name="question7c">
        <b>
            <u>Total number of cigarettes</u>
        </b>
        you used today?
    </string>

    <string name="question8">Did you use
        <b>
            <u>YOUR OWN POUCH PRODUCT</u>
        </b>
        today?
    </string>
    <string name="question8a">
        <b>
            <u>Total Number of times</u>
        </b>
        you used your own pouches today?
    </string>
    <string name="question8b">
        <b>
            <u>Total Number of pouches</u>
        </b>
        you used today?
    </string>

    <string name="question9a">Please mark the number that best represents how using the test product
        made you feel
    </string>
    <string name="question9b">Overall, is the test product a product you would likely use on a
        regular basis?
    </string>
    <string name="question9c">Was using the test product satisfying?</string>
    <string name="question9d">Did the test product taste good?</string>
    <string name="question9e">Did you enjoy using the test product?</string>
    <string name="question9f">Did you enjoy the amount of tobacco taste in the test product?
    </string>
    <string name="question9g">How likely are you to replace your current pouch product with the test
        product?
    </string>


    <string name="please_enter_user_id">Please enter User ID</string>
    <string name="please_enter_survey_id">Please enter Survey #</string>
    <string name="please_enter_password">Please enter Password</string>

</resources>
