<?xml version="1.0" encoding="utf-8"?>
<android.support.design.widget.CoordinatorLayout android:id="@+id/clMain"
                                                 xmlns:android="http://schemas.android.com/apk/res/android"
                                                 android:layout_width="match_parent"
                                                 android:layout_height="match_parent"
                                                 android:fitsSystemWindows="true">

    <RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:background="@color/text_color_white">

        <ImageView
            android:id="@+id/ivCancel"
            android:layout_width="?attr/actionBarSize"
            android:layout_height="?attr/actionBarSize"
            android:padding="@dimen/activity_margin"
            android:src="@drawable/ic_close"/>

        <TextView
            android:id="@+id/tvTitle"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignBottom="@+id/ivCancel"
            android:layout_alignTop="@+id/ivCancel"
            android:layout_centerHorizontal="true"
            android:gravity="center"
            android:text="Survey"
            android:textColor="@color/primary_text2"
            android:textSize="@dimen/text_size_large"
            android:textStyle="bold"/>

        <View
            android:id="@+id/v1"
            android:layout_width="match_parent"
            android:layout_height="1dp"
            android:layout_below="@+id/ivCancel"
            android:background="@color/text_color_grey_light2"/>

        <ScrollView
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_below="@+id/v1">

            <RelativeLayout
                android:id="@+id/rl1"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="@dimen/activity_margin">

                <LinearLayout
                    android:id="@+id/llQuestion5"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:orientation="horizontal"
                    android:weightSum="4">


                    <TextView
                        android:id="@+id/tvQuestion5"
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:layout_weight="3"
                        android:background="@color/text_color_grey_light"
                        android:gravity="center"
                        android:padding="10dp"
                        android:text="@string/question5"
                        android:textColor="@color/primary_text2"
                        android:textSize="@dimen/text_size_medium"/>


                    <EditText
                        android:id="@+id/etAnswer5"
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:layout_below="@id/tvQuestion5"
                        android:layout_centerInParent="true"
                        android:layout_gravity="center_vertical"
                        android:layout_weight="1"
                        android:background="@drawable/et_background"
                        android:gravity="center_horizontal"
                        android:hint="enter number"
                        android:textColor="@color/primary_text2"
                        android:textSize="@dimen/text_size_medium"
                        android:textStyle="bold"/>

                </LinearLayout>


                <LinearLayout
                    android:id="@+id/llQuestion6"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_below="@+id/llQuestion5"
                    android:layout_marginTop="@dimen/activity_margin"
                    android:orientation="horizontal"
                    android:weightSum="4">


                    <TextView
                        android:id="@+id/tvQuestion6"
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:layout_weight="3"
                        android:background="@color/text_color_grey_light"
                        android:gravity="center"
                        android:padding="10dp"
                        android:text="@string/question6"
                        android:textColor="@color/primary_text2"
                        android:textSize="@dimen/text_size_medium"/>


                    <EditText
                        android:id="@+id/etAnswer6"
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:layout_below="@id/tvQuestion5"
                        android:layout_centerInParent="true"
                        android:layout_gravity="center_vertical"
                        android:layout_weight="1"
                        android:background="@drawable/et_background"
                        android:gravity="center_horizontal"
                        android:hint="enter number"
                        android:textColor="@color/primary_text2"
                        android:textSize="@dimen/text_size_medium"
                        android:textStyle="bold"/>

                </LinearLayout>


                <LinearLayout
                    android:id="@+id/llQuestion7"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_below="@+id/llQuestion6"
                    android:layout_marginTop="@dimen/activity_margin"
                    android:orientation="horizontal"
                    android:weightSum="4">


                    <TextView
                        android:id="@+id/tvQuestion7"
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:layout_weight="3"
                        android:background="@color/text_color_grey_light"
                        android:gravity="center"
                        android:padding="10dp"
                        android:text="@string/question7"
                        android:textColor="@color/primary_text2"
                        android:textSize="@dimen/text_size_medium"/>


                    <EditText
                        android:id="@+id/etAnswer7"
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:layout_centerInParent="true"
                        android:layout_gravity="center_vertical"
                        android:layout_weight="1"
                        android:background="@drawable/et_background"
                        android:gravity="center_horizontal"
                        android:hint="enter minute"
                        android:textColor="@color/primary_text2"
                        android:textSize="@dimen/text_size_medium"
                        android:textStyle="bold"/>

                </LinearLayout>


                <LinearLayout
                    android:id="@+id/llQuestion8"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_below="@+id/llQuestion7"
                    android:layout_marginTop="@dimen/activity_margin"
                    android:orientation="horizontal"
                    android:weightSum="4">


                    <TextView
                        android:id="@+id/tvQuestion8"
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:layout_weight="3"
                        android:background="@color/text_color_grey_light"
                        android:gravity="center"
                        android:padding="10dp"
                        android:text="@string/question8"
                        android:textColor="@color/primary_text2"
                        android:textSize="@dimen/text_size_medium"/>


                    <EditText
                        android:id="@+id/etAnswer8"
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:layout_centerInParent="true"
                        android:layout_gravity="center_vertical"
                        android:layout_weight="1"
                        android:background="@drawable/et_background"
                        android:gravity="center_horizontal"
                        android:hint="enter minute"
                        android:textColor="@color/primary_text2"
                        android:textSize="@dimen/text_size_medium"
                        android:textStyle="bold"/>

                </LinearLayout>


            </RelativeLayout>
        </ScrollView>

        <TextView
            android:id="@+id/tv1"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_alignParentBottom="true"
            android:layout_margin="@dimen/activity_margin"
            android:background="@drawable/bg_button"
            android:gravity="center"
            android:padding="@dimen/activity_margin_small"
            android:text="Submit Feedback"
            android:textColor="@color/text_color_white"
            android:textSize="@dimen/text_size_medium"
            android:textStyle="bold"
            android:visibility="visible"/>

    </RelativeLayout>
</android.support.design.widget.CoordinatorLayout>